
   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * New option ``-c``/``--change`` for ``merge`` command for cherrypicking 
     changes from one revision. (Alexander Belchenko, #141368)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)

  BUG FIXES:

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with
     no changes still reports the operation as pointless but doing so no
     longer throws away the profiling data if this command is run with
     ``--lsprof-file callgrind.out.ci`` say. (Ian Clatworthy)

   * Fallback to ftp when paramiko is not installed and sftp can't be used for
     ``tests/commands`` so that the test suite is still usable without
     paramiko.
     (Vincent Ladeuil, #59150)

   * Fix commit ordering in corner case. (Aaron Bentley, #94975)

   * Fix long standing bug in partial commit when there are renames 
     left in tree. (Robert Collins, #140419)

   * Fix selftest semi-random noise during http related tests.
     (Vincent Ladeuil, #140614)

   * Fix failing test by comparing real paths to cover the case where the TMPDIR
     contains a symbolic link.
     (Vincent Ladeuil, #141382).

   * Fix log against smart server branches that don't support tags.
     (James Westby, #140615)

   * Fix 'unprintable error' message when displaying BzrCheckError and 
     some other exceptions on Python 2.5.
     (Martin Pool, #144633)

   * Handles default value for ListOption in cmd_commit.
     (Vincent Ladeuil, #140432)

   * HttpServer and FtpServer need to be closed properly or a listening socket
     will remain opened.
     (Vincent Ladeuil, #140055)

   * Monitor the .bzr directory created in the top level test
     directory to detect leaking tests.
     (Vincent Ladeuil, #147986)
